tests/snapshots/snapshot_fixtures__stdlib__stdio__fopen_roundtrip.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdio/fopen_roundtrip.c" (c, x86_64-unknown-linux-gnu)
global __const.main.name : s8i[32] = "slate_stdio_fopen_roundtrip.tmp" [cir_private, default, dso_local, constant]
global .str : s8i[3] = "w+" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "open-fail" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[7] = "alpha\n" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[7] = "%ld:%s" [cir_private, default, align 1, dso_local, constant]

fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn fopen(%arg0: s8i*, %arg1: s8i*) -> rec__IO_FILE* [external, c];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn fflush(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn ftell(%arg0: rec__IO_FILE*) -> s64i [external, c];
fn rewind(%arg0: rec__IO_FILE*) -> void [external, c];
fn fgets(%arg0: s8i*, %arg1: s32i, %arg2: rec__IO_FILE*) -> s8i* [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn fclose(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i[32], "name", align 16
    %2 = alloca rec__IO_FILE*, "f", align 8
    %3 = alloca s64i, "pos", align 8
    %4 = alloca s8i[16], "b", align 16
    %5 = const 0 : s32i
    store %5, %0
    %6 = get_global @__const.main.name : s8i[32]*
    copy %1, %6
    %7 = cast(array_to_ptrdecay) %1 : s8i*
    %8 = call @remove(%7) : s32i [all]
    %9 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %10 = cast(array_to_ptrdecay) %1 : s8i*
    %11 = get_global @.str : s8i[3]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = call @fopen(%10, %12) : rec__IO_FILE* [all]
    store %13, %2, align 8
    scope {
        %39 = load %2 : rec__IO_FILE*, align 8
        %40 = cast(ptr_to_bool) %39 : bool
        %41 = not %40 : bool
        if %41 {
            %42 = get_global @.str.1 : s8i[10]*
            %43 = cast(array_to_ptrdecay) %42 : s8i*
            %44 = call @puts(%43) : s32i [all]
            %45 = const 0 : s32i
            store %45, %0
            %46 = load %0 : s32i
            return %46
        }
        yield
    }
    %14 = get_global @.str.2 : s8i[7]*
    %15 = cast(array_to_ptrdecay) %14 : s8i*
    %16 = load %2 : rec__IO_FILE*, align 8
    %17 = call @fputs(%15, %16) : s32i [all]
    %18 = load %2 : rec__IO_FILE*, align 8
    %19 = call @fflush(%18) : s32i [all]
    %20 = load %2 : rec__IO_FILE*, align 8
    %21 = call @ftell(%20) : s64i [all]
    store %21, %3, align 8
    %22 = load %2 : rec__IO_FILE*, align 8
    call @rewind(%22) [all]
    %23 = cast(array_to_ptrdecay) %4 : s8i*
    %24 = const 16 : s32i
    %25 = load %2 : rec__IO_FILE*, align 8
    %26 = call @fgets(%23, %24, %25) : s8i* [all]
    %27 = get_global @printf : ((s8i*, ...) -> s32i)*
    %28 = get_global @.str.3 : s8i[7]*
    %29 = cast(array_to_ptrdecay) %28 : s8i*
    %30 = load %3 : s64i, align 8
    %31 = cast(array_to_ptrdecay) %4 : s8i*
    %32 = call @printf(%29, %30, %31) : s32i [all]
    %33 = load %2 : rec__IO_FILE*, align 8
    %34 = call @fclose(%33) : s32i [all]
    %35 = cast(array_to_ptrdecay) %1 : s8i*
    %36 = call @remove(%35) : s32i [all]
    %37 = const 0 : s32i
    store %37, %0
    %38 = load %0 : s32i
    return %38
}
