tests/snapshots/snapshot_fixtures__stdlib__stdio__getchar.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdio/getchar.c" (c, x86_64-unknown-linux-gnu)
fn getchar() -> s32i [external, c];
fn putchar(%arg0: s32i) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "c", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        while {
            %7 = call @getchar() : s32i [all]
            store %7, %1, align 4
            %8 = const -1 : s32i
            %9 = cmp ne %7, %8 : bool
            condition %9
        } do {
            %5 = load %1 : s32i, align 4
            %6 = call @putchar(%5) : s32i [all]
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
