tests/snapshots/snapshot_fixtures__stdlib__stdio__printf_widths.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdio/printf_widths.c" (c, x86_64-unknown-linux-gnu)
global __const.main.s : s8i[3] = "xy" [cir_private, default, dso_local, constant]
global .str : s8i[19] = "%05d|%-4s|%+d|%#x\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "n", align 4
    %2 = alloca s32i, "m", align 4
    %3 = alloca s8i[3], "s", align 1
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 42 : s32i
    store %5, %1, align 4, volatile
    %6 = const -42 : s32i
    store %6, %2, align 4
    %7 = get_global @__const.main.s : s8i[3]*
    copy %3, %7
    %8 = get_global @printf : ((s8i*, ...) -> s32i)*
    %9 = get_global @.str : s8i[19]*
    %10 = cast(array_to_ptrdecay) %9 : s8i*
    %11 = load %1 : s32i, align 4, volatile
    %12 = cast(array_to_ptrdecay) %3 : s8i*
    %13 = load %2 : s32i, align 4
    %14 = load %1 : s32i, align 4, volatile
    %15 = call @printf(%10, %11, %12, %13, %14) : s32i [all]
    %16 = const 0 : s32i
    store %16, %0
    %17 = load %0 : s32i
    return %17
}
