tests/snapshots/snapshot_fixtures__stdlib__stdio__rename_remove.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdio/rename_remove.c" (c, x86_64-unknown-linux-gnu)
global __const.main.b : s8i[25] = "slate_stdio_rename_b.tmp" [cir_private, default, dso_local, constant]
global __const.main.a : s8i[25] = "slate_stdio_rename_a.tmp" [cir_private, default, dso_local, constant]
global .str : s8i[2] = "w" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[10] = "open-fail" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[2] = "R" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[2] = "r" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[10] = "%d %c %d\n" [cir_private, default, align 1, dso_local, constant]

fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn fopen(%arg0: s8i*, %arg1: s8i*) -> rec__IO_FILE* [external, c];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn fclose(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn rename(%arg0: s8i*, %arg1: s8i*) -> s32i [external, c, nothrow];
fn fgetc(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i[25], "a", align 16
    %2 = alloca s8i[25], "b", align 16
    %3 = alloca rec__IO_FILE*, "f", align 8
    %4 = alloca s32i, "renamed", align 4
    %5 = alloca rec__IO_FILE*, "g", align 8
    %6 = alloca s32i, "c", align 4
    %7 = alloca s32i, "removed", align 4
    %8 = const 0 : s32i
    store %8, %0
    %9 = get_global @__const.main.a : s8i[25]*
    copy %1, %9
    %10 = get_global @__const.main.b : s8i[25]*
    copy %2, %10
    %11 = cast(array_to_ptrdecay) %1 : s8i*
    %12 = call @remove(%11) : s32i [all]
    %13 = cast(array_to_ptrdecay) %2 : s8i*
    %14 = call @remove(%13) : s32i [all]
    %15 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %16 = cast(array_to_ptrdecay) %1 : s8i*
    %17 = get_global @.str : s8i[2]*
    %18 = cast(array_to_ptrdecay) %17 : s8i*
    %19 = call @fopen(%16, %18) : rec__IO_FILE* [all]
    store %19, %3, align 8
    scope {
        %55 = load %3 : rec__IO_FILE*, align 8
        %56 = cast(ptr_to_bool) %55 : bool
        %57 = not %56 : bool
        if %57 {
            %58 = get_global @.str.1 : s8i[10]*
            %59 = cast(array_to_ptrdecay) %58 : s8i*
            %60 = call @puts(%59) : s32i [all]
            %61 = const 0 : s32i
            store %61, %0
            %62 = load %0 : s32i
            return %62
        }
        yield
    }
    %20 = get_global @.str.2 : s8i[2]*
    %21 = cast(array_to_ptrdecay) %20 : s8i*
    %22 = load %3 : rec__IO_FILE*, align 8
    %23 = call @fputs(%21, %22) : s32i [all]
    %24 = load %3 : rec__IO_FILE*, align 8
    %25 = call @fclose(%24) : s32i [all]
    %26 = cast(array_to_ptrdecay) %1 : s8i*
    %27 = cast(array_to_ptrdecay) %2 : s8i*
    %28 = call @rename(%26, %27) : s32i [all]
    store %28, %4, align 4
    %29 = get_global @fopen : ((s8i*, s8i*) -> rec__IO_FILE*)*
    %30 = cast(array_to_ptrdecay) %2 : s8i*
    %31 = get_global @.str.3 : s8i[2]*
    %32 = cast(array_to_ptrdecay) %31 : s8i*
    %33 = call @fopen(%30, %32) : rec__IO_FILE* [all]
    store %33, %5, align 8
    %34 = load %5 : rec__IO_FILE*, align 8
    %35 = cast(ptr_to_bool) %34 : bool
    %36 = ternary %35 ? { : s32i
        %53 = load %5 : rec__IO_FILE*, align 8
        %54 = call @fgetc(%53) : s32i [all]
        yield %54
    } : {
        %52 = const 63 : s32i
        yield %52
    }
    store %36, %6, align 4
    scope {
        %48 = load %5 : rec__IO_FILE*, align 8
        %49 = cast(ptr_to_bool) %48 : bool
        if %49 {
            %50 = load %5 : rec__IO_FILE*, align 8
            %51 = call @fclose(%50) : s32i [all]
            yield
        }
        yield
    }
    %37 = cast(array_to_ptrdecay) %2 : s8i*
    %38 = call @remove(%37) : s32i [all]
    store %38, %7, align 4
    %39 = get_global @printf : ((s8i*, ...) -> s32i)*
    %40 = get_global @.str.4 : s8i[10]*
    %41 = cast(array_to_ptrdecay) %40 : s8i*
    %42 = load %4 : s32i, align 4
    %43 = load %6 : s32i, align 4
    %44 = load %7 : s32i, align 4
    %45 = call @printf(%41, %42, %43, %44) : s32i [all]
    %46 = const 0 : s32i
    store %46, %0
    %47 = load %0 : s32i
    return %47
}
